<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailedActivity"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <!-- Job Title -->
                    <TextView
                        android:id="@+id/jobTitle"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="45dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/eb_garamond"
                        android:text="@string/job_title"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <!-- Company -->
                    <TextView
                        android:id="@+id/jobCompany"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="2dp"
                        android:fontFamily="@font/raleway_light"
                        android:text="@string/job_company"
                        android:textColor="@color/black"
                        android:textSize="11sp" />

                    <!-- Job Qualification -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/raleway_semibold"
                        android:text="@string/job_qualification"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/jobQual"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/raleway_light"
                        android:text="@string/job_qualification"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <!-- Experience -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/raleway_semibold"
                        android:text="@string/job_experience"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/jobExp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/raleway_light"
                        android:text="@string/job_experience"
                        android:textColor="@color/black"
                        android:textSize="12sp" />


                </LinearLayout>

                <ImageView
                    android:id="@+id/jobImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_launcher_background" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">

                <!-- Job Description -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:fontFamily="@font/raleway_semibold"
                    android:text="@string/job_description"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/jobDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_light"
                    android:lineSpacingMultiplier="1.25"
                    android:text="@string/job_description"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <!-- Job Description -->

    <!--    <com.google.android.material.button.MaterialButton-->
<!--        android:layout_width="150dp"-->
<!--        android:layout_height="45dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:text="@string/apply_button"-->
<!--        />-->

</LinearLayout>

